--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,43 @@
-// Specific CSS for your home-page
+.cards-new {
+  display: grid;
+  grid-gap: 20px;
+  flex-grow: 1;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 20px;
+  // position: absolute;
+}
+
+.grid-box {
+  &:hover {
+    transform: scale(1.02);
+    transition: 0.5s;
+  }
+  margin-bottom: -50px;
+}
+
+.grid-pic {
+  width:100%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+}
+
+.my-card {
+  padding: 10px;
+  border-radius: 2px;
+  font-size: 22px;
+  background-color: rgb(52, 58, 64);
+  color:white;
+  position: relative;
+  top: -55px;
+  left: 89px;
+}
+
+@media(max-width: 992px) {
+  .cards-new {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media(max-width: 768px) {
+  .cards-new {
+    grid-template-columns: 1fr;
+  }
+}
