--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -6,6 +6,12 @@
   width: 56px;
   border-radius: 50%;
 }
+
+.avatar-xlarge {
+  width: 100px;
+  border-radius: 10px;
+}
+
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
