--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,6 +2,7 @@
   <h1>Add a new cocktail</h1>
   <%= simple_form_for @cocktail, :html => {class: "col-sm-12 col-lg-8"} do |f| %>
     <%= f.input :name %>
+    <%= f.input :description %>
     <%= f.button :submit, class: "btn btn-success" %>
   <% end %>
 </div>
