--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -16,7 +16,7 @@
       <% @cocktail.doses.each do |dose| %>
         <tr>
             <th scope="row"><%= dose.ingredient.name %></th>
-            <td><%= dose.description %></td>
+            <td><%= dose.quantity %></td>
             <td><%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
           <i class="far fa-trash-alt"></i>
           <% end %></td>
@@ -28,7 +28,7 @@
   <h3>Add a new dose</h3>
     <%= simple_form_for [@cocktail, @dose], :html => {class: "col-sm-12 col-lg-8"} do |f| %>
       <%= f.association :ingredient, input_html: { class: 'select2' } %>
-      <%= f.input :description %>
+      <%= f.input :quantity %>
       <%= f.button :submit, class: 'btn-success' %>
     <% end %>
     <br>
