--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="cards-new">
-      <% @cocktails.each do |cocktail| %>
+      <% @cocktails.first(10).each do |cocktail| %>
         <%= link_to cocktail_path(cocktail) do %>
           <div class="card-grid card-shadow">
             <div class="grid-box">
